--- a/index.html
+++ b/index.html
@@ -604,9 +604,9 @@
           
           </div>
 
-          <div class="col-md-6 d-flex">
+         <!-- <div class="col-md-6 d-flex">
           	<div class="img" style="background-image: url(images/about.jpg);"></div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
