--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">aravindsathishkumar2004@gmail.com
+	            <p><a href="mailto:aravindsathishkumar2004@gmail.com">aravindsathishkumar2004@gmail.com
 				</a></p>
 	          </div>
           </div>
