--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
       </div>
     </section> -->
 
-    <section class="ftco-section img margin-top" style="background-image: url(images/bg_1.jpg)">
+    <section class="ftco-section  img margin-top" style="background-image: url(images/bg_1.jpg)">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
@@ -551,7 +551,7 @@
         </div>
 
         <div class="row d-flex contact-info mb-5">
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          <div class="col-md-6 col-lg-3 d-flex ">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-linkedin"></span>
