--- a/index.html
+++ b/index.html
@@ -532,9 +532,9 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
-						<h2>I'm <span>Available</span> for freelancing</h2>
+						<h2> Want be a part of 2K poeple  who gain knowledge from my content ?</h2>
 						
-						<p class="mb-0"><a href="https://www.linkedin.com/in/aravind-sathishkumar-04383a24b" class="btn btn-primary py-3 px-5">Hire me</a><p/>
+						<p class="mb-0"><a href="https://www.linkedin.com/in/aravind-sathishkumar-04383a24b" class="btn btn-primary py-3 px-5">Here Go</a><p/>
 					</div>
 				</div>
 			</div>
