--- a/index.html
+++ b/index.html
@@ -535,6 +535,7 @@
 						<h2> Want be a part of 2K poeple  who gain knowledge from my content ?</h2>
 						
 						<p class="mb-0"><a href="https://www.linkedin.com/in/aravind-sathishkumar-04383a24b" class="btn btn-primary py-3 px-5">Here Go</a><p/>
+						<h3> I will be posting content related to entrepreneurship, business,books,productivity, entertainment etc regularly .See you there!</h3>
 					</div>
 				</div>
 			</div>
