--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
     	<div class="container">
-    		<div class="row d-flex">
+    		<div class="row d-flex flex-row-reverse">
     			<div class="col-md-6 col-lg-5 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
